# experiments.ml.smarthome.ufba.br

./: .gitignore  README.md  accuracy_graphics.py  output_treatment.py  pyproject.toml  run_over_ml_models.py
dataset/scenarios/casa/90_DIAS/multi-label/devices/sensors_actuators_specific_states/t+120/: BANHEIRO_01_LAMPADA-008.csv  BANHEIRO_02_LAMPADA-009.csv  COZINHA_CAFETEIRA-020.csv  ESCRITORIO_AR_CONDICIONADO-006.csv  QUARTO_01_AR_CONDICIONADO-012.csv  QUARTO_01_LAMPADA-011.csv  QUARTO_02_AR_CONDICIONADO-016.csv  QUARTO_02_LAMPADA-015.csv  SALA_AR_CONDICIONADO-002.csv  SALA_TV-001.csv
dataset/scenarios/casa/90_DIAS/multi-label/devices/sensors_actuators_specific_states/t+60/: COZINHA_CAFETEIRA-020.csv
